e-mail 전송 기능, 메인 원스탑 안전 신고 기능 추가

--- a/Kiznic/res/values/strings.xml
+++ b/Kiznic/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="IVstring">3nHk1k8ghhyo1A2u</string>
     <string name="sPadding">PKCS5Padding</string>
     <string name="openApiKey">VOkSUpz7nEopmqMzB%2FuxEbYc38fdppOA3nw%2FI%2FReAWcwC%2BmQZl1acj0vs%2B2hJUUA6W%2FRYIICIH2FMkUOw%2BloYw%3D%3D</string>
+    <string name="kizniconestop_mail">kiznic.onestop@gmail.com</string>
+    <string name="kizniconestop_pw">kiznichhh</string>
 
     <string name="str_done">완료</string>
     
